# luizalabs

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
luizalabs/: app.py
luizalabs/controlers/: auth.py  product.py  user.py  user_product_favorite.py
luizalabs/crud/: product.py  user.py  user_product_favorite.py
luizalabs/database/: db_connection.py  orm_registry.py
luizalabs/models/: __init__.py  product.py  user.py  user_product_favorite.py
luizalabs/routers/v1/: __init__.py  auth.py  product.py  user.py  user_product_favorite.py
luizalabs/schemas/: product.py  security.py  user.py  user_product_favorite.py
luizalabs/seeds/: product_seed.py
luizalabs/settings/: settings.py
luizalabs/utils/: common_annotations.py  unit_of_work.py  user_annotations.py
migrations/: env.py
migrations/versions/: 0029aba62aea_deletar_em_forma_de_cascata.py  1fd6e3d5ed2c_criacao_tabelas.py
tests/: __init__.py  conftest.py  factories.py  test_app.py
tests/fixtures/: __init__.py  auth_fixture.py  product_fixture.py  user_fixture.py  user_product_favorite_fixture.py
tests/test_auth.py/: test_post_auth.py
tests/test_product/: test_get_product.py
tests/test_user/: test_delete.py  test_get_user.py  test_post_user.py  test_update_user.py
tests/test_user_product_favorite/: test_get_user_product_favorite.py  test_post_user_product_favorite.py
